[package]
name = "data_server"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "get_points"
path = "src/get_points.rs"

[[bin]]
name = "set_points"
path = "src/set_points.rs"

[[bin]]
name = "add_points"
path = "src/add_points.rs"

[dependencies]
diesel = { version = "1.4.0", features = ["postgres", "extras"] }
dotenv = "0.15.0"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
r2d2_postgres = "0.18.0"

[build-dependencies]
tonic-build = "0.4"
