[package]
name = "hardbot"
version = "0.1.0"
authors = ["steve"]
edition = "2018"

[dependencies]
twitch-irc = "2.2.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
anyhow = "1.0.36"
stringlit = "2.0.0"
maplit = "1.0.2"
serde = {version = "1.0.118", features = ["derive"]}
toml = "0.5.8"
dirs = "3.0.1"
signal-hook = "0.3.1"
bincode = "1.3.1"
rand = "0.8.1"
dotlock = "0.5.0"
fasteval = "0.2.4"

common = { path = "../common" }
strum = "0.20.0"
strum_macros = "0.20.0"
